deployment/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: comic-metaphor-engine
  name: comic-metaphor-service
  namespace: production
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: comic-metaphor-engine
  type: LoadBalancer
