deployment/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  name: comic-metaphor-ingress
  namespace: production
spec:
  rules:
  - host: api.comicmetaphor.com
    http:
      paths:
      - backend:
          service:
            name: comic-metaphor-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.comicmetaphor.com
    secretName: comic-metaphor-tls
